[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://editor_v2/ui/editor.gd" id="1_editor"]
[ext_resource type="PackedScene" path="res://editor_v2/ui/map_view.tscn" id="2_map_view"]
[ext_resource type="PackedScene" path="res://editor_v2/ui/size_panel.tscn" id="3_size_panel"]
[ext_resource type="PackedScene" path="res://editor_v2/ui/terrain_panel.tscn" id="4_terrain_panel"]

[node name="Editor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_editor")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapView" parent="HBoxContainer/ScrollContainer/CenterContainer" instance=ExtResource("2_map_view")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Size" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer" instance=ExtResource("3_size_panel")]
unique_name_in_owner = true
layout_mode = 2

[node name="Terrain" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer" instance=ExtResource("4_terrain_panel")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="player_count_changed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Size" to="." method="_on_player_count_changed"]
[connection signal="size_changed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Size" to="." method="_on_size_changed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
